Removed obsolete classes